# serializer version: 1
# name: test_download_file_error
  list([
    '[chan 0] Opened sftp connection (server version 3)',
    'Connected to "0.0.0.0" as "django_tests"',
    'Current remote dir is "/"',
    'Starting DOWNLOAD of feedback files',
    'Fetching file: RIAE_FS_00000000000000_FichierRetour.json',
    'Error while parsing file RIAE_FS_00000000000000_FichierRetour.json: ex=[Errno 13] Permission denied',
    "Will not delete file 'RIAE_FS_00000000000000_FichierRetour.json' because of errors.",
    'Successfully parsed 0/1 files',
    '[chan 0] sftp session closed.',
    'Employee record notifications processing done!',
  ])
# ---
# name: test_missing_environment_asp_sftp_host
  list([
    'Your environment is missing ASP_SFTP_HOST to run this command.',
  ])
# ---
# name: test_option_asp_test
  list([
    'Using *TEST* JSON serializers (SIRET number mapping)',
    '[chan 0] Opened sftp connection (server version 3)',
    'Connected to "0.0.0.0" as "django_tests"',
    'Current remote dir is "/"',
    'Starting DOWNLOAD of feedback files',
    'Successfully parsed 0/0 files',
    '[chan 0] sftp session closed.',
    'Employee record notifications processing done!',
  ])
# ---
# name: test_preflight
  list([
    'Preflight activated, checking for possible serialization errors...',
    'Found 3 object(s) to check, split in chunks of 700 objects.',
    'Checking file #1 (chunk of 3 objects)',
    'All serializations ok, you may skip preflight...',
  ])
# ---
# name: test_preflight_with_error
  list([
    'Preflight activated, checking for possible serialization errors...',
    'Found 1 object(s) to check, split in chunks of 700 objects.',
    'Checking file #1 (chunk of 1 objects)',
    '''
      Serialization of EmployeeRecordUpdateNotification object (42) failed!
      > Got AttributeError when attempting to get a value for field `passDateDeb` on serializer `_PersonSerializer`.
      > The serializer field might be named incorrectly and not match any attribute or key on the `EmployeeRecord` instance.
      > Original exception text was: 'NoneType' object has no attribute 'start_at'.
    ''',
  ])
# ---
# name: test_preflight_without_object
  list([
    'Preflight activated, checking for possible serialization errors...',
    'No object to check. Exiting preflight.',
  ])
# ---
# name: test_upload_and_download[download]
  dict({
    'num_queries': 4,
    'queries': list([
      dict({
        'origin': list([
          'Atomic.__enter__[<site-packages>/django/db/transaction.py]',
          'Command.download_json_file[employee_record/common_management.py]',
          'Command.download[employee_record/management/commands/transfer_employee_records_updates.py]',
          'Command.handle[employee_record/management/commands/transfer_employee_records_updates.py]',
        ]),
        'sql': 'SAVEPOINT "<snapshot>"',
      }),
      dict({
        'origin': list([
          'EmployeeRecordUpdateNotificationQuerySet.first[<site-packages>/django/db/models/query.py]',
          'Command._parse_feedback_file[employee_record/management/commands/transfer_employee_records_updates.py]',
          'Command.download_json_file[employee_record/common_management.py]',
          'Command.download[employee_record/management/commands/transfer_employee_records_updates.py]',
          'Command.handle[employee_record/management/commands/transfer_employee_records_updates.py]',
        ]),
        'sql': '''
          SELECT "employee_record_employeerecordupdatenotification"."id",
                 "employee_record_employeerecordupdatenotification"."asp_processing_code",
                 "employee_record_employeerecordupdatenotification"."asp_processing_label",
                 "employee_record_employeerecordupdatenotification"."asp_batch_file",
                 "employee_record_employeerecordupdatenotification"."asp_batch_line_number",
                 "employee_record_employeerecordupdatenotification"."archived_json",
                 "employee_record_employeerecordupdatenotification"."created_at",
                 "employee_record_employeerecordupdatenotification"."updated_at",
                 "employee_record_employeerecordupdatenotification"."status",
                 "employee_record_employeerecordupdatenotification"."employee_record_id"
          FROM "employee_record_employeerecordupdatenotification"
          WHERE ("employee_record_employeerecordupdatenotification"."asp_batch_file" = %s
                 AND "employee_record_employeerecordupdatenotification"."asp_batch_line_number" = %s)
          ORDER BY "employee_record_employeerecordupdatenotification"."created_at" DESC
          LIMIT 1
        ''',
      }),
      dict({
        'origin': list([
          'EmployeeRecordUpdateNotification.save[<site-packages>/django/db/models/base.py]',
          'Command._parse_feedback_file[employee_record/management/commands/transfer_employee_records_updates.py]',
          'Command.download_json_file[employee_record/common_management.py]',
          'Command.download[employee_record/management/commands/transfer_employee_records_updates.py]',
          'Command.handle[employee_record/management/commands/transfer_employee_records_updates.py]',
        ]),
        'sql': '''
          UPDATE "employee_record_employeerecordupdatenotification"
          SET "asp_processing_code" = %s,
              "asp_processing_label" = %s,
              "asp_batch_file" = %s,
              "asp_batch_line_number" = %s,
              "archived_json" = %s,
              "created_at" = %s,
              "updated_at" = %s,
              "status" = %s,
              "employee_record_id" = %s
          WHERE "employee_record_employeerecordupdatenotification"."id" = %s
        ''',
      }),
      dict({
        'origin': list([
          'Atomic.__exit__[<site-packages>/django/db/transaction.py]',
          'Command.download_json_file[employee_record/common_management.py]',
          'Command.download[employee_record/management/commands/transfer_employee_records_updates.py]',
          'Command.handle[employee_record/management/commands/transfer_employee_records_updates.py]',
        ]),
        'sql': 'RELEASE SAVEPOINT "<snapshot>"',
      }),
    ]),
  })
# ---
# name: test_upload_and_download[logs]
  list([
    '[chan 1] Opened sftp connection (server version 3)',
    'Connected to "0.0.0.0" as "django_tests"',
    'Current remote dir is "/"',
    'Starting DOWNLOAD of feedback files',
    'Fetching file: RIAE_FS_20210927000000_FichierRetour.json',
    '<EmployeeRecordUpdateNotification pk=1234> performed transition EmployeeRecordUpdateNotificationWorkflow.process (SENT -> PROCESSED)',
    "Successfully processed 'RIAE_FS_20210927000000_FichierRetour.json', it can be deleted.",
    "Deleting 'RIAE_FS_20210927000000_FichierRetour.json' from SFTP server",
    'Successfully parsed 1/1 files',
    '[chan 1] sftp session closed.',
    'Employee record notifications processing done!',
  ])
# ---
# name: test_upload_and_download[upload]
  dict({
    'num_queries': 2,
    'queries': list([
      dict({
        'origin': list([
          'Command.upload[employee_record/management/commands/transfer_employee_records_updates.py]',
          'Command.handle[employee_record/management/commands/transfer_employee_records_updates.py]',
        ]),
        'sql': '''
          SELECT "employee_record_employeerecordupdatenotification"."id",
                 "employee_record_employeerecordupdatenotification"."asp_processing_code",
                 "employee_record_employeerecordupdatenotification"."asp_processing_label",
                 "employee_record_employeerecordupdatenotification"."asp_batch_file",
                 "employee_record_employeerecordupdatenotification"."asp_batch_line_number",
                 "employee_record_employeerecordupdatenotification"."archived_json",
                 "employee_record_employeerecordupdatenotification"."created_at",
                 "employee_record_employeerecordupdatenotification"."updated_at",
                 "employee_record_employeerecordupdatenotification"."status",
                 "employee_record_employeerecordupdatenotification"."employee_record_id",
                 "employee_record_employeerecord"."id",
                 "employee_record_employeerecord"."asp_processing_code",
                 "employee_record_employeerecord"."asp_processing_label",
                 "employee_record_employeerecord"."asp_batch_file",
                 "employee_record_employeerecord"."asp_batch_line_number",
                 "employee_record_employeerecord"."archived_json",
                 "employee_record_employeerecord"."created_at",
                 "employee_record_employeerecord"."updated_at",
                 "employee_record_employeerecord"."processed_at",
                 "employee_record_employeerecord"."status",
                 "employee_record_employeerecord"."job_application_id",
                 "employee_record_employeerecord"."ntt",
                 "employee_record_employeerecord"."financial_annex_id",
                 "employee_record_employeerecord"."approval_number",
                 "employee_record_employeerecord"."asp_id",
                 "employee_record_employeerecord"."asp_measure",
                 "employee_record_employeerecord"."siret",
                 "employee_record_employeerecord"."processed_as_duplicate",
                 "job_applications_jobapplication"."id",
                 "job_applications_jobapplication"."job_seeker_id",
                 "job_applications_jobapplication"."eligibility_diagnosis_id",
                 "job_applications_jobapplication"."geiq_eligibility_diagnosis_id",
                 "job_applications_jobapplication"."create_employee_record",
                 "job_applications_jobapplication"."resume_id",
                 "job_applications_jobapplication"."sender_id",
                 "job_applications_jobapplication"."sender_kind",
                 "job_applications_jobapplication"."sender_company_id",
                 "job_applications_jobapplication"."sender_prescriber_organization_id",
                 "job_applications_jobapplication"."to_company_id",
                 "job_applications_jobapplication"."state",
                 "job_applications_jobapplication"."archived_at",
                 "job_applications_jobapplication"."archived_by_id",
                 "job_applications_jobapplication"."hired_job_id",
                 "job_applications_jobapplication"."message",
                 "job_applications_jobapplication"."answer",
                 "job_applications_jobapplication"."answer_to_prescriber",
                 "job_applications_jobapplication"."refusal_reason",
                 "job_applications_jobapplication"."refusal_reason_shared_with_job_seeker",
                 "job_applications_jobapplication"."hiring_start_at",
                 "job_applications_jobapplication"."hiring_end_at",
                 "job_applications_jobapplication"."origin",
                 "job_applications_jobapplication"."approval_id",
                 "job_applications_jobapplication"."approval_delivery_mode",
                 "job_applications_jobapplication"."approval_number_sent_by_email",
                 "job_applications_jobapplication"."approval_number_sent_at",
                 "job_applications_jobapplication"."approval_manually_delivered_by_id",
                 "job_applications_jobapplication"."approval_manually_refused_by_id",
                 "job_applications_jobapplication"."approval_manually_refused_at",
                 "job_applications_jobapplication"."transferred_at",
                 "job_applications_jobapplication"."transferred_by_id",
                 "job_applications_jobapplication"."transferred_from_id",
                 "job_applications_jobapplication"."created_at",
                 "job_applications_jobapplication"."updated_at",
                 "job_applications_jobapplication"."processed_at",
                 "job_applications_jobapplication"."prehiring_guidance_days",
                 "job_applications_jobapplication"."contract_type",
                 "job_applications_jobapplication"."nb_hours_per_week",
                 "job_applications_jobapplication"."contract_type_details",
                 "job_applications_jobapplication"."qualification_type",
                 "job_applications_jobapplication"."qualification_level",
                 "job_applications_jobapplication"."planned_training_hours",
                 "job_applications_jobapplication"."inverted_vae_contract",
                 "job_applications_jobapplication"."diagoriente_invite_sent_at",
                 "users_user"."id",
                 "users_user"."password",
                 "users_user"."last_login",
                 "users_user"."is_superuser",
                 "users_user"."username",
                 "users_user"."first_name",
                 "users_user"."last_name",
                 "users_user"."is_staff",
                 "users_user"."is_active",
                 "users_user"."date_joined",
                 "users_user"."address_line_1",
                 "users_user"."address_line_2",
                 "users_user"."post_code",
                 "users_user"."city",
                 "users_user"."department",
                 "users_user"."coords",
                 "users_user"."geocoding_score",
                 "users_user"."geocoding_updated_at",
                 "users_user"."ban_api_resolved_address",
                 "users_user"."insee_city_id",
                 "users_user"."title",
                 "users_user"."full_name_search_vector",
                 "users_user"."email",
                 "users_user"."phone",
                 "users_user"."kind",
                 "users_user"."identity_provider",
                 "users_user"."has_completed_welcoming_tour",
                 "users_user"."created_by_id",
                 "users_user"."external_data_source_history",
                 "users_user"."last_checked_at",
                 "users_user"."public_id",
                 "users_user"."address_filled_at",
                 "users_user"."first_login",
                 "users_user"."upcoming_deletion_notified_at",
                 "users_user"."allow_next_sso_sub_update",
                 "users_jobseekerprofile"."user_id",
                 "users_jobseekerprofile"."birthdate",
                 "users_jobseekerprofile"."birth_place_id",
                 "users_jobseekerprofile"."birth_country_id",
                 "users_jobseekerprofile"."nir",
                 "users_jobseekerprofile"."lack_of_nir_reason",
                 "users_jobseekerprofile"."pole_emploi_id",
                 "users_jobseekerprofile"."lack_of_pole_emploi_id_reason",
                 "users_jobseekerprofile"."ft_gps_id",
                 "users_jobseekerprofile"."asp_uid",
                 "users_jobseekerprofile"."education_level",
                 "users_jobseekerprofile"."resourceless",
                 "users_jobseekerprofile"."rqth_employee",
                 "users_jobseekerprofile"."oeth_employee",
                 "users_jobseekerprofile"."pole_emploi_since",
                 "users_jobseekerprofile"."unemployed_since",
                 "users_jobseekerprofile"."has_rsa_allocation",
                 "users_jobseekerprofile"."rsa_allocation_since",
                 "users_jobseekerprofile"."ass_allocation_since",
                 "users_jobseekerprofile"."aah_allocation_since",
                 "users_jobseekerprofile"."are_allocation_since",
                 "users_jobseekerprofile"."activity_bonus_since",
                 "users_jobseekerprofile"."cape_freelance",
                 "users_jobseekerprofile"."cesa_freelance",
                 "users_jobseekerprofile"."actor_met_for_business_creation",
                 "users_jobseekerprofile"."mean_monthly_income_before_process",
                 "users_jobseekerprofile"."eiti_contributions",
                 "users_jobseekerprofile"."ase_exit",
                 "users_jobseekerprofile"."isolated_parent",
                 "users_jobseekerprofile"."housing_issue",
                 "users_jobseekerprofile"."refugee",
                 "users_jobseekerprofile"."detention_exit_or_ppsmj",
                 "users_jobseekerprofile"."low_level_in_french",
                 "users_jobseekerprofile"."mobility_issue",
                 "users_jobseekerprofile"."hexa_lane_number",
                 "users_jobseekerprofile"."hexa_std_extension",
                 "users_jobseekerprofile"."hexa_non_std_extension",
                 "users_jobseekerprofile"."hexa_lane_type",
                 "users_jobseekerprofile"."hexa_lane_name",
                 "users_jobseekerprofile"."hexa_additional_address",
                 "users_jobseekerprofile"."hexa_post_code",
                 "users_jobseekerprofile"."hexa_commune_id",
                 "users_jobseekerprofile"."pe_obfuscated_nir",
                 "users_jobseekerprofile"."pe_last_certification_attempt_at",
                 "users_jobseekerprofile"."created_by_prescriber_organization_id",
                 "users_jobseekerprofile"."is_stalled",
                 "users_jobseekerprofile"."is_not_stalled_anymore",
                 "users_jobseekerprofile"."fields_history",
                 "asp_commune"."id",
                 "asp_commune"."start_date",
                 "asp_commune"."end_date",
                 "asp_commune"."code",
                 "asp_commune"."name",
                 "asp_commune"."normalized_name",
                 "asp_commune"."created_at",
                 "asp_commune"."city_id",
                 "asp_commune"."ignore",
                 "asp_country"."id",
                 "asp_country"."code",
                 "asp_country"."name",
                 "asp_country"."group",
                 "asp_country"."department",
                 T8."id",
                 T8."start_date",
                 T8."end_date",
                 T8."code",
                 T8."name",
                 T8."normalized_name",
                 T8."created_at",
                 T8."city_id",
                 T8."ignore",
                 "prescribers_prescriberorganization"."id",
                 "prescribers_prescriberorganization"."address_line_1",
                 "prescribers_prescriberorganization"."address_line_2",
                 "prescribers_prescriberorganization"."post_code",
                 "prescribers_prescriberorganization"."city",
                 "prescribers_prescriberorganization"."department",
                 "prescribers_prescriberorganization"."coords",
                 "prescribers_prescriberorganization"."geocoding_score",
                 "prescribers_prescriberorganization"."geocoding_updated_at",
                 "prescribers_prescriberorganization"."ban_api_resolved_address",
                 "prescribers_prescriberorganization"."insee_city_id",
                 "prescribers_prescriberorganization"."name",
                 "prescribers_prescriberorganization"."created_at",
                 "prescribers_prescriberorganization"."updated_at",
                 "prescribers_prescriberorganization"."uid",
                 "prescribers_prescriberorganization"."active_members_email_reminder_last_sent_at",
                 "prescribers_prescriberorganization"."automatic_geocoding_update",
                 "prescribers_prescriberorganization"."siret",
                 "prescribers_prescriberorganization"."kind",
                 "prescribers_prescriberorganization"."is_brsa",
                 "prescribers_prescriberorganization"."phone",
                 "prescribers_prescriberorganization"."email",
                 "prescribers_prescriberorganization"."website",
                 "prescribers_prescriberorganization"."description",
                 "prescribers_prescriberorganization"."code_safir_pole_emploi",
                 "prescribers_prescriberorganization"."created_by_id",
                 "prescribers_prescriberorganization"."authorization_status",
                 "prescribers_prescriberorganization"."authorization_updated_at",
                 "prescribers_prescriberorganization"."authorization_updated_by_id",
                 "prescribers_prescriberorganization"."is_gps_authorized",
                 "companies_company"."id",
                 "companies_company"."address_line_1",
                 "companies_company"."address_line_2",
                 "companies_company"."post_code",
                 "companies_company"."city",
                 "companies_company"."department",
                 "companies_company"."coords",
                 "companies_company"."geocoding_score",
                 "companies_company"."geocoding_updated_at",
                 "companies_company"."ban_api_resolved_address",
                 "companies_company"."insee_city_id",
                 "companies_company"."name",
                 "companies_company"."created_at",
                 "companies_company"."updated_at",
                 "companies_company"."uid",
                 "companies_company"."active_members_email_reminder_last_sent_at",
                 "companies_company"."automatic_geocoding_update",
                 "companies_company"."siret",
                 "companies_company"."naf",
                 "companies_company"."kind",
                 "companies_company"."brand",
                 "companies_company"."phone",
                 "companies_company"."email",
                 "companies_company"."auth_email",
                 "companies_company"."website",
                 "companies_company"."description",
                 "companies_company"."provided_support",
                 "companies_company"."source",
                 "companies_company"."created_by_id",
                 "companies_company"."block_job_applications",
                 "companies_company"."job_applications_blocked_at",
                 "companies_company"."spontaneous_applications_open_since",
                 "companies_company"."convention_id",
                 "companies_company"."job_app_score",
                 "companies_company"."is_searchable",
                 "companies_company"."rdv_solidarites_id",
                 "companies_company"."fields_history",
                 "approvals_approval"."id",
                 "approvals_approval"."start_at",
                 "approvals_approval"."end_at",
                 "approvals_approval"."created_at",
                 "approvals_approval"."number",
                 "approvals_approval"."pe_notification_status",
                 "approvals_approval"."pe_notification_time",
                 "approvals_approval"."pe_notification_endpoint",
                 "approvals_approval"."pe_notification_exit_code",
                 "approvals_approval"."user_id",
                 "approvals_approval"."created_by_id",
                 "approvals_approval"."origin",
                 "approvals_approval"."eligibility_diagnosis_id",
                 "approvals_approval"."updated_at",
                 "approvals_approval"."origin_siae_siret",
                 "approvals_approval"."origin_siae_kind",
                 "approvals_approval"."origin_sender_kind",
                 "approvals_approval"."origin_prescriber_organization_kind",
                 "approvals_approval"."public_id"
          FROM "employee_record_employeerecordupdatenotification"
          INNER JOIN "employee_record_employeerecord" ON ("employee_record_employeerecordupdatenotification"."employee_record_id" = "employee_record_employeerecord"."id")
          INNER JOIN "job_applications_jobapplication" ON ("employee_record_employeerecord"."job_application_id" = "job_applications_jobapplication"."id")
          INNER JOIN "users_user" ON ("job_applications_jobapplication"."job_seeker_id" = "users_user"."id")
          LEFT OUTER JOIN "users_jobseekerprofile" ON ("users_user"."id" = "users_jobseekerprofile"."user_id")
          LEFT OUTER JOIN "asp_commune" ON ("users_jobseekerprofile"."birth_place_id" = "asp_commune"."id")
          LEFT OUTER JOIN "asp_country" ON ("users_jobseekerprofile"."birth_country_id" = "asp_country"."id")
          LEFT OUTER JOIN "asp_commune" T8 ON ("users_jobseekerprofile"."hexa_commune_id" = T8."id")
          LEFT OUTER JOIN "prescribers_prescriberorganization" ON ("job_applications_jobapplication"."sender_prescriber_organization_id" = "prescribers_prescriberorganization"."id")
          INNER JOIN "companies_company" ON ("job_applications_jobapplication"."to_company_id" = "companies_company"."id")
          LEFT OUTER JOIN "approvals_approval" ON ("job_applications_jobapplication"."approval_id" = "approvals_approval"."id")
          WHERE "employee_record_employeerecordupdatenotification"."status" = %s
          ORDER BY "employee_record_employeerecordupdatenotification"."updated_at" ASC,
                   "employee_record_employeerecordupdatenotification"."id" ASC
        ''',
      }),
      dict({
        'origin': list([
          'EmployeeRecordUpdateNotification.save[<site-packages>/django/db/models/base.py]',
          'Command._upload_batch_file[employee_record/management/commands/transfer_employee_records_updates.py]',
          'Command.upload[employee_record/management/commands/transfer_employee_records_updates.py]',
          'Command.handle[employee_record/management/commands/transfer_employee_records_updates.py]',
        ]),
        'sql': '''
          UPDATE "employee_record_employeerecordupdatenotification"
          SET "asp_processing_code" = NULL,
              "asp_processing_label" = NULL,
              "asp_batch_file" = %s,
              "asp_batch_line_number" = %s,
              "archived_json" = %s,
              "created_at" = %s,
              "updated_at" = %s,
              "status" = %s,
              "employee_record_id" = %s
          WHERE "employee_record_employeerecordupdatenotification"."id" = %s
        ''',
      }),
    ]),
  })
# ---
# name: test_upload_file_error
  list([
    '[chan 0] Opened sftp connection (server version 3)',
    'Connected to "0.0.0.0" as "django_tests"',
    'Current remote dir is "/"',
    'Starting UPLOAD of 1 notification(s)',
    'Could not upload file: RIAE_FS_20210927000000.json, reason: [Errno 2] No such file',
    'Could not upload file, exiting ...',
    '[chan 0] sftp session closed.',
    'Employee record notifications processing done!',
  ])
# ---
# name: test_upload_only_create_a_limited_number_of_files
  list([
    '[chan 0] Opened sftp connection (server version 3)',
    'Connected to "0.0.0.0" as "django_tests"',
    'Current remote dir is "/"',
    'Starting UPLOAD of 2 notification(s)',
    'Successfully uploaded: RIAE_FS_20210927000000.json',
    '<EmployeeRecordUpdateNotification pk=1234> performed transition EmployeeRecordUpdateNotificationWorkflow.wait_for_asp_response (NEW -> SENT)',
    '[chan 0] sftp session closed.',
    'Employee record notifications processing done!',
  ])
# ---
